# similarity_matching

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  package.xml
include/: image_matcher.hh  similarity_matcher.hh  similarity_matcher.hpp
launch/: mapping_demo.launch  similarity_demo.launch
msg/: Keypoints.msg
scripts/: heatmap_visualizer_publisher.py  target_image_publisher.py  xfeat_interface.py
src/: image_matcher.cc  similarity_matcher.cc  similarity_matcher.cpp  similarity_matching_node.cc
