<?xml version="1.0"?>
<package format="2">
  <name>similarity_matching</name>
  <version>0.0.0</version>
  <description>The similarity_matching package</description>
  <maintainer email="jc@todo.todo">jc</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>geographic_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>python3-dev</build_depend>
  <build_depend>roslib</build_depend>

  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>geographic_msgs</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>


  <exec_depend>roslib</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geographic_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>libopencv-dev</exec_depend>
  <exec_depend>python3</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-torch</exec_depend>

  <export>
  </export>
</package>